--- a/add-product.html
+++ b/add-product.html
@@ -6,7 +6,7 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Form Tooltip Alerts | Nucleus</title>
+		<title>Dashboard | Add product</title>
 		<meta name="description" content="Premium HTML5 Template">
 		<meta name="keywords" content=" HTML5, Premium Template, Nucleus Theme">
 		<meta name="author" content="Amazyne Themes">
@@ -86,7 +86,7 @@
 								<!-- Logo -->
 
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/bumpy-admin-logo.png" />
+									<img alt="image" src="images/bumpy-admin-bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
@@ -159,12 +159,12 @@
               <div class="side-header-inner-container">
                 <ul class="side-header-nav">
                   <li class="with-dropdown active">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-presentation"></i>Dashboard</a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-presentation"></i>Dashboard</a>
 
                   </li>
-                  <li class="menu-heading">Features</li>
+                  <li class="menu-heading">Menu</li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-category.html">Add Categories</a></li>
                       <li><a href="product-category-list.html">List of Categories</a></li>
@@ -180,7 +180,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
 
                       <li><a href="add-product.html">Add Product </a></li>
@@ -189,7 +189,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-special-offer.html">Add special offer</a></li>
                       <li><a href="special-offers-list.html">List of Special offers </a></li>
@@ -197,7 +197,7 @@
                   </li>
 
                   <li class="with-dropdown">
-                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-grid"></i>Tables <span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
+                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-grid"></i>Tables <span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
 
                   </li>
 
@@ -263,7 +263,7 @@
                     <textarea class="form-control" id="long_desc" rows="4" ></textarea>
 										<label class="control-label">Club price</label>
                     <input type="number" class="form-control"  id="clubPrice" />
-								
+
                     <label class="control-label">Original price</label>
                     <input type="number" class="form-control"  id="origPrice" />
                    				<button type="submit" onclick="addProduct(event)" class="btn btn-theme">Submit</button>
@@ -274,15 +274,7 @@
 			</div>
 		</div><!-- End of Page Content -->
 
-		<!-- Footer -->
 
-		<footer class="footer container-fluid">
-			<div class="row">
-				<div class="col-md-12 ">
-					<p class="letter-spacing-1">©2017 Bumpy shoppers - East-Legon - Tel. +0233 000000</p>
-				</div>
-			</div>
-		</footer><!-- End of Footer -->
 
         <!-- Loading Third Party Scripts -->
 
@@ -310,7 +302,7 @@
         <script src="js/scripts.js"></script>
         <script src="js/custom.js"></script>
 
-		
+
 
 <script>
 	function addProduct(event) {
