--- a/add-special-offers.html
+++ b/add-special-offers.html
@@ -6,7 +6,7 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Bumpy Shoppers | Special offer</title>
+		<title>Dashboard | Special offer</title>
 		<meta name="description" content="Premium HTML5 Template">
 		<meta name="keywords" content=" HTML5, Premium Template, Nucleus Theme">
 		<meta name="author" content="Amazyne Themes">
@@ -81,7 +81,7 @@
 								<!-- Logo -->
 
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/bumpy-admin-logo.png" />
+									<img alt="image" src="images/bumpy-admin-bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
@@ -151,12 +151,12 @@
               <div class="side-header-inner-container">
                 <ul class="side-header-nav">
                   <li class="with-dropdown active">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-presentation"></i>Dashboard</a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-presentation"></i>Dashboard</a>
 
                   </li>
-                  <li class="menu-heading">Features</li>
+                  <li class="menu-heading">Menu</li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-category.html">Add Categories</a></li>
                       <li><a href="product-category-list.html">List of Categories</a></li>
@@ -172,7 +172,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
 
                       <li><a href="add-product.html">Add Product </a></li>
@@ -181,7 +181,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-special-offers.html">Add special offer</a></li>
                       <li><a href="special-offers-list.html">List of Special offers </a></li>
@@ -309,15 +309,6 @@
 			</div>
 		</div><!-- End of Page Content -->
 
-		<!-- Footer -->
-
-		<footer class="footer container-fluid">
-			<div class="row">
-				<div class="col-md-12 ">
-					<p class="letter-spacing-1">©2017 Bumpy shoppers - East-Legon - Tel. +0233 000000</p>
-				</div>
-			</div>
-		</footer><!-- End of Footer -->
 
         <!-- Loading Third Party Scripts -->
 
