--- a/product-list.html
+++ b/product-list.html
@@ -81,7 +81,7 @@
 								<!-- Logo -->
 
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/bumpy-admin-logo.png" />
+									<img alt="image" src="images/bumpy-admin-bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
@@ -153,12 +153,12 @@
               <div class="side-header-inner-container">
                 <ul class="side-header-nav">
                   <li class="with-dropdown active">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-presentation"></i>Dashboard</a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-presentation"></i>Dashboard</a>
 
                   </li>
-                  <li class="menu-heading">Features</li>
+                  <li class="menu-heading">Menu</li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-category.html">Add Categories</a></li>
                       <li><a href="product-category-list.html">List of Categories</a></li>
@@ -166,7 +166,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
 
                       <li><a href="add-product.html">Add Product </a></li>
@@ -175,7 +175,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-special-offer.html">Add special offer</a></li>
                       <li><a href="special-offers-list.html">List of Special offers </a></li>
@@ -183,7 +183,7 @@
                   </li>
 
                   <li class="with-dropdown">
-                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-grid"></i>Tables <span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
+                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-grid"></i>Tables <span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
 
                   </li>
 
@@ -251,7 +251,7 @@
 										  <td class="var-origPrice">...</td>
 										  <td class="var-category-name">...</td>
 										  <td><button class="btn btn-theme">Update</button></td>
-                   
+
 										</tr>
 									</tbody>
 								</table>
@@ -263,15 +263,6 @@
 			</div>
 		</div><!-- End of Page Content -->
 
-		<!-- Footer -->
-
-		<footer class="footer container-fluid">
-			<div class="row">
-				<div class="col-md-12 ">
-					<p class="letter-spacing-1">©2017 Bumpy shoppers - East-Legon - Tel. +0233 000000</p>
-				</div>
-			</div>
-		</footer><!-- End of Footer -->
 
         <!-- Loading Third Party Scripts -->
 
