--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								</a>
 								<!-- Logo -->
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/bumpy-admin-logo.png" />
+									<img alt="image" src="images/bumpy-admin-bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
@@ -151,7 +151,7 @@
 							<div class="side-header-inner-container">
 								<ul class="side-header-nav">
 									<li class="with-dropdown active">
-										<a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-presentation"></i>Dashboard</a>
+										<a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-presentation"></i>Dashboard</a>
 
 									</li>
 									<li class="menu-heading">Menu</li>
@@ -296,15 +296,7 @@
           </div>
         </div>
       </div>
-		<!-- Footer -->
 
-		<footer class="footer container-fluid">
-			<div class="row">
-				<div class="col-md-12 ">
-					<p class="letter-spacing-1">©2017 Bumpy shoppers - East-Legon - Tel. +0233 000000</p>
-				</div>
-			</div>
-		</footer><!-- End of Footer -->
 
         <!-- Loading Third Party Scripts -->
 
