--- a/product-category-list.html
+++ b/product-category-list.html
@@ -91,7 +91,7 @@
 								<!-- Logo -->
 
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/logo.png" />
+									<img alt="image" src="images/bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
@@ -166,12 +166,12 @@
               <div class="side-header-inner-container">
                 <ul class="side-header-nav">
                   <li class="with-dropdown active">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-presentation"></i>Dashboard</a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-presentation"></i>Dashboard</a>
 
                   </li>
-                  <li class="menu-heading">Features</li>
+                  <li class="menu-heading">Menu</li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-category.html">Add Categories</a></li>
                       <li><a href="product-category-list.html">List of Categories</a></li>
@@ -187,7 +187,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
 
                       <li><a href="add-product.html">Add Product </a></li>
@@ -196,7 +196,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-special-offer.html">Add special offer</a></li>
                       <li><a href="special-offers-list.html">List of Special offers </a></li>
@@ -204,7 +204,7 @@
                   </li>
 
                   <li class="with-dropdown">
-                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-grid"></i>Tables <span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
+                    <a class="menu-dropdown-link with-badge" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-grid"></i>Tables <span class="dropdown-icon"></span><span class="menu-badge bg-orange">2</span></a>
 
                   </li>
 
@@ -258,7 +258,7 @@
 										</tr>
 									</thead>
 									<tbody class="dv-get-all:orders:category">
-				
+
 										<tr>
 										  <td class="var-name">...</td>
 										  <td class="var-desc">...</td>
@@ -274,15 +274,7 @@
 			</div>
 		</div><!-- End of Page Content -->
 
-		<!-- Footer -->
 
-		<footer class="footer container-fluid">
-			<div class="row">
-				<div class="col-md-12 ">
-					<p class="letter-spacing-1">©2017 Bumpy shoppers - East-Legon - Tel. +0233 000000</p>
-				</div>
-			</div>
-		</footer><!-- End of Footer -->
 
         <!-- Loading Third Party Scripts -->
 
@@ -337,7 +329,7 @@
 			});
 		</script>
 
-     
+
 <script src="http://admin.bumpyshoppersclub.com/js/devless-sdk.js" class="devless-connection" devless-con-token="2d490ab1264453d3cb2718d699cdfd0a"></script>
 
 
