--- a/special-offers-list.html
+++ b/special-offers-list.html
@@ -91,7 +91,7 @@
 								<!-- Logo -->
 
 								<a class="logo" href="index.html">
-									<img alt="image" src="images/bumpy-admin-logo.png" />
+									<img alt="image" src="images/bumpy-admin-bumpy-admin-logo.png" />
 								</a><!-- End of Logo -->
 							</div>
 
@@ -160,12 +160,12 @@
               <div class="side-header-inner-container">
                 <ul class="side-header-nav">
                   <li class="with-dropdown active">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-presentation"></i>Dashboard</a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-presentation"></i>Dashboard</a>
 
                   </li>
-                  <li class="menu-heading">Features</li>
+                  <li class="menu-heading">Menu</li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Categories <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-category.html">Add Categories</a></li>
                       <li><a href="product-category-list.html">List of Categories</a></li>
@@ -181,7 +181,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-browser"></i>Products <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
 
                       <li><a href="add-product.html">Add Product </a></li>
@@ -190,7 +190,7 @@
                     </ul>
                   </li>
                   <li class="with-dropdown">
-                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="index-2.html#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
+                    <a  class="menu-dropdown-link" data-toggle="collapse" aria-expanded="true" href="#"><i class="icon-linegraph"></i>Special offers <span class="dropdown-icon"></span></a>
                     <ul class="menu-dropdown collapse">
                       <li><a href="add-special-offer.html">Add special offer</a></li>
                       <li><a href="special-offers-list.html">List of Special offers </a></li>
@@ -304,15 +304,6 @@
 			</div>
 		</div><!-- End of Page Content -->
 
-		<!-- Footer -->
-
-		<footer class="footer container-fluid">
-			<div class="row">
-				<div class="col-md-12 ">
-					<p class="letter-spacing-1">©2017 Bumpy shoppers - East-Legon - Tel. +0233 000000</p>
-				</div>
-			</div>
-		</footer><!-- End of Footer -->
 
         <!-- Loading Third Party Scripts -->
 
